Add tropical island biome destinations and images

--- a/tides.html
+++ b/tides.html
@@ -50,70 +50,85 @@
     <!-- Europe -->
     <div class="destination-card" data-family="family" data-continent="europe" data-type="relaxing">
       <a href="https://www.booking.com/city/es/canary-islands.en.html" target="_blank">
-        <img src="images/canary-islands.jpg" alt="Canary Islands, Spain" />
+        <img src="tides-biome/spain.jpg" alt="Canary Islands, Spain" />
         <h3>Canary Islands, Spain</h3>
       </a>
     </div>
     <div class="destination-card" data-family="adult" data-continent="europe" data-type="adventurous">
-      <a href="https://www.booking.com/region/pt/azores.en.html" target="_blank">
-        <img src="images/azores-portugal.jpg" alt="Azores, Portugal" />
+      <a href="https://www.pestana.com/en/hotel/pestana-bahia-praia?utm_campaign=pestana-bahia-praia-partoo&utm_medium=organicsearch" target="_blank">
+        <img src="tides-biome/portugal.jpg" alt="Azores, Portugal" />
         <h3>Azores, Portugal</h3>
       </a>
     </div>
 
     <!-- Asia -->
     <div class="destination-card" data-family="family" data-continent="asia" data-type="relaxing">
-      <a href="https://www.booking.com/city/id/bali.en.html" target="_blank">
-        <img src="images/bali-indonesia.jpg" alt="Bali, Indonesia" />
+      <a href="https://balibeachsanur.com/" target="_blank">
+        <img src="tides-biome/bail.jpg" alt="Bali, Indonesia" />
         <h3>Bali, Indonesia</h3>
       </a>
     </div>
     <div class="destination-card" data-family="adult" data-continent="asia" data-type="adventurous">
-      <a href="https://www.booking.com/city/mv/maldives.en.html" target="_blank">
-        <img src="images/maldives.jpg" alt="Maldives" />
+      <a href="https://villaresorts.com/villa-park/" target="_blank">
+        <img src="tides-biome/maldives.jpg" alt="Maldives" />
         <h3>Maldives</h3>
       </a>
     </div>
 
     <!-- Africa -->
     <div class="destination-card" data-family="family" data-continent="africa" data-type="relaxing">
-      <a href="https://www.booking.com/city/mu/mauritius.en.html" target="_blank">
-        <img src="images/mauritius.jpg" alt="Mauritius" />
+      <a href="https://www.ocean-villas.com/" target="_blank">
+        <img src="tides-biome/mauritius.jpg" alt="Mauritius" />
         <h3>Mauritius</h3>
       </a>
     </div>
     <div class="destination-card" data-family="adult" data-continent="africa" data-type="adventurous">
-      <a href="https://www.booking.com/city/sc/seychelles.en.html" target="_blank">
-        <img src="images/seychelles.jpg" alt="Seychelles" />
+      <a href="https://www.fourseasons.com/seychelles/?utm_source=google&utm_medium=organicsearch&utm_campaign=tor-sey-hre-mid-seo-na&utm_content=na-na&utm_term=na" target="_blank">
+        <img src="tides-biome/Seychelles.jpg" alt="Seychelles" />
         <h3>Seychelles</h3>
       </a>
     </div>
 
     <!-- North America -->
     <div class="destination-card" data-family="family" data-continent="north-america" data-type="relaxing">
-      <a href="https://www.booking.com/city/do/punta-cana.en.html" target="_blank">
-        <img src="images/punta-cana.jpg" alt="Punta Cana, Dominican Republic" />
+      <a href="https://www.melia.com/en/hotels/dominican-republic/punta-cana/melia-caribe-beach-resort?utm_campaign=google&utm_content=5918&utm_medium=organic&utm_source=directories" target="_blank">
+        <img src="tides-biome/punta-cana.jpg" alt="Punta Cana, Dominican Republic" />
         <h3>Punta Cana, Dominican Republic</h3>
       </a>
     </div>
     <div class="destination-card" data-family="adult" data-continent="north-america" data-type="adventurous">
-      <a href="https://www.booking.com/city/mx/cancun.en.html" target="_blank">
-        <img src="images/cancun.jpg" alt="Cancún, Mexico" />
+      <a href="https://solymarcancun.com/" target="_blank">
+        <img src="tides-biome/cancun.jpg" alt="Cancún, Mexico" />
         <h3>Cancún, Mexico</h3>
       </a>
     </div>
 
     <!-- Oceania -->
     <div class="destination-card" data-family="family" data-continent="oceania" data-type="relaxing">
-      <a href="https://www.booking.com/city/fj/nadi.en.html" target="_blank">
-        <img src="images/fiji.jpg" alt="Fiji" />
+      <a href="https://www.marriott.com/en-us/hotels/nanmc-fiji-marriott-resort-momi-bay/overview/?scid=f2ae0541-1279-4f24-b197-a979c79310b0" target="_blank">
+        <img src="tides-biome/fiji.jpg" alt="Fiji" />
         <h3>Fiji</h3>
       </a>
     </div>
     <div class="destination-card" data-family="adult" data-continent="oceania" data-type="adventurous">
-      <a href="https://www.booking.com/city/pf/bora-bora.en.html" target="_blank">
-        <img src="images/bora-bora.jpg" alt="Bora Bora, French Polynesia" />
+      <a href="https://www.fourseasons.com/borabora/?utm_source=google&utm_medium=organicsearch&utm_campaign=tor-bor-hre-mid-seo-na&utm_content=na-na&utm_term=na" target="_blank">
+        <img src="tides-biome/bora-bora.jpg" alt="Bora Bora, French Polynesia" />
         <h3>Bora Bora, French Polynesia</h3>
+      </a>
+    </div>
+    <!-- Fernando de Noronha, Brazil -->
+    <div class="destination-card" data-family="adult" data-continent="south-america" data-type="beach">
+      <a href="https://hamares.com.br/" target="_blank">
+        <img src="tides-biome/brazil.jpg" alt="Fernando de Noronha, Brazil" />
+        <h3>Fernando de Noronha, Brazil</h3>
+      </a>
+    </div>
+
+    <!-- San Andrés, Colombia -->
+    <div class="destination-card" data-family="adult" data-continent="south-america" data-type="beach">
+      <a href="https://www.lasislas.com.co/" target="_blank">
+        <img src="tides-biome/colombia.jpg" alt="San Andrés, Colombia" />
+        <h3>San Andrés, Colombia</h3>
       </a>
     </div>
   </div>
@@ -177,6 +192,6 @@
   
 </footer>
 
-<script src="filter.js"></script>
+<script src="biome.js"></script>
 </body>
 </html>
