Updated images, reorganized folders, modified HTML and CSS for explore and feature-holidays sections

--- a/about-us.html
+++ b/about-us.html
@@ -47,7 +47,7 @@
         </p>
       </div>
       <div class="story-image">
-        <img src="Screenshot 2025-08-18 161017.png" alt="Our Team" />
+        <img src="about-image/staff.png" alt="Our Team" />
       </div>
     </section>
 
@@ -55,7 +55,7 @@
       <h2>What We Value</h2>
       <div class="values-grid">
         <div class="value-card">
-          <img src="holiday-pictures-frost/Screenshot 2025-08-13 105540.png" alt="Luxury" />
+          <img src="about-image/italy.jpg" alt="Luxury" />
           <h3>Luxury</h3>
           <p>Every detail matters. We craft experiences that feel effortless, elegant, and unforgettable.</p>
         </div>
@@ -65,7 +65,7 @@
           <p>Our trips are rooted in real culture and community, making your journey authentic and unique.</p>
         </div>
         <div class="value-card">
-          <img src="appenzell-alps-switzerland-mountain-range-glacier-mountains-3840x2160-6397.jpg" alt="Exploration" />
+          <img src="about-image/switzerland.jpg" alt="Exploration" />
           <h3>Exploration</h3>
           <p>We celebrate curiosity — helping travelers step into new worlds and discover hidden gems.</p>
         </div>
