--- a/test-explore.html
+++ b/test-explore.html
@@ -10,10 +10,10 @@
 
   <!-- Background Slides -->
   <div class="bg-slides">
-    <div class="bg-slide active" style="background-image: url('explore-image/snow.png');"></div>
-    <div class="bg-slide" style="background-image: url('explore-image/green.png');"></div>
-    <div class="bg-slide" style="background-image: url('explore-image/fire.png');"></div>
-    <div class="bg-slide" style="background-image: url('explore-image/island.png');"></div>
+    <div class="bg-slide active" style="background-image: url('explore-image/snow.jpg');"></div>
+    <div class="bg-slide" style="background-image: url('explore-image/jungle.jpg');"></div>
+    <div class="bg-slide" style="background-image: url('explore-image/fire.jpg');"></div>
+    <div class="bg-slide" style="background-image: url('explore-image/pexels-mikhail-nilov-8356067.jpg');"></div>
   </div>
 
   <!-- Logo and Navigation on top of slideshow -->
@@ -71,7 +71,7 @@ const slideData = [
 
 let current = 0;
 const total = slides.length;
-const intervalTime = 3000; // 3 seconds
+const intervalTime = 4000; // 4 seconds
 
 function showSlide(index) {
   slides.forEach((slide, i) => {
